# othello

./: .gitignore  CLAUDE.md  CMakeLists.txt  JOURNAL.md  Makefile  bitboard.c  bitboard.h  common.h  flake.nix  game_tree.h  hash.h  main.c  notes_2026-05-10_revival.md  othello.c  pyproject.toml  test.c  test_board.c  test_tree.c  unit.c  unit.h  util.h  wrap.sh
Source/: main.lua
apps/: CMakeLists.txt  data_gen.c  data_gen_mcts.c  data_gen_policy.c  data_gen_policy_norm.c  print_dataset.c  test_zstd.c  thunderdome.c  zstd_file.h
attic/microbenchmarks/: Makefile  attic.c  lib.c  main.c
attic/microbenchmarks/Source/: pdxinfo
attic/ml_2023/: eval2.py  res2.html  test.py
attic/ml_2023/rip/: out_4096_train_with_valid_and_fixed_data.torch  out_8192_8192_128_256_8192_train_with_valid_and_fixed_data_and_dedup_then_with_dup_v2_final_for_real_this_time.torch  out_8192_8192_128_256_train_with_valid_and_fixed_data_and_dedup.torch  out_8192_8192_128_train_with_valid_and_fixed_data_and_dedup.torch  out_8192_8192_32_train_with_valid_and_fixed_data_and_dedup.torch  out_8192_8192_64_train_with_valid_and_fixed_data_and_dedup.torch  out_8192_8192_train_with_valid_and_fixed_data_and_dedup.torch  out_8192_train_with_valid_and_fixed_data.torch  out_8192_train_with_valid_and_fixed_data_and_dedup.torch
attic/old_configs/: data_gen_policy_debug.toml
attic/old_python/: old_othello.py  vis_training.py
attic/old_scripts/: make_gpu_node.sh
attic/original_playdate_game/: Makefile  game_tree.h  hash.h  test_board.c
attic/original_playdate_game/Source/: pdex.dylib  pdxinfo
datastruct/: game_set.h
libcommon/: CMakeLists.txt  common.c  common.h  hash.h
libcomputer/: CMakeLists.txt  mcts.c  mcts.h  nn.c  nn.h  nn_policy.c  nn_policy.h  weights.c
libothello/: CMakeLists.txt  make_move_serial.h  make_move_slow.h  make_move_vector_generic.h  othello.c  othello.h  valid_moves_serial.h  valid_moves_vectorized.h  valid_moves_vectorized_arm.h  valid_moves_vectorized_intel.h
libunit/: CMakeLists.txt  unit.c  unit.h
microbenchmarks/: Makefile  lib.c  lib.h  main.c  test.c
ml/: convert.py  eval.py  nn.py
ml/data_gen/: Makefile  common.h  data_gen.c  grab.py  othello.c  othello.h  test_othello.c  wthor.h
ml/models/: out_128.torch  out_8192.torch  out_with_valid.torch
othello_ml/: config.py  eval.py  nn.py  pipeline.py
othello_ml/scripts/: convert.py  dump_weights.py  make_local_config.py  make_split.py  test_loader.py  train.py
othello_ml/util/: loaders.py  tracer.py
scripts/: thunderdome_sweep.sh
tests/: CMakeLists.txt  test.c  test_common.c  test_mcts.c  test_othello.c
training/: modal_train.py  pyproject.toml
training/othello_ml/: config.py
training/othello_ml/scripts/: analyze_trace.py  data_floor.py  dump_weights.py  eval_loss.py  inspect_policy.py  inspect_weights.py  make_local_config.py  make_split.py  train.py
training/othello_ml/util/: loaders.py
tree-vis/: collapsable.css  collapsable.js  index.html
web_game/: CMakeLists.txt  index.html  package-lock.json  package.json  vite.config.js  wasm_wrapper.c
web_game/src/: App.svelte  Cell.svelte  Game.svelte  app.css  othello.js
web_game/src/lib/: Cell.svelte
wthor_files/: WTHOR.JOU  WTHOR.TRN  WTH_2023.wtb
