[project]
name = "othello-ml"
version = "0.1.0"
description = "Training pipeline for the othello NN player"
requires-python = ">=3.11,<3.13"
dependencies = [
    "numpy>=1.26",
    "torch>=2.2",
    "wandb>=0.16",
    "pyzstd>=0.15",
    "lz4>=4.3",
    "toml>=0.10",
    "tqdm>=4.66",
    # Linux-only: used by util/loaders.py for shared memory prefetch.
    "fallocate>=1.6 ; sys_platform == 'linux'",
]

[tool.uv]
# CPU-only torch on darwin; CUDA wheels on linux are picked up by default
# from PyPI when running on a GPU box.
override-dependencies = []

[tool.uv.sources]
# Pin torch to the CPU index on darwin so we don't pull in the giant
# CUDA wheels for a machine that can't use them.
torch = [
    { index = "pytorch-cpu", marker = "sys_platform == 'darwin'" },
]

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["othello_ml"]
