[project]
name = "othello-ml"
version = "0.1.0"
description = "Training pipeline for the othello NN player"
requires-python = ">=3.11,<3.13"
dependencies = [
    "numpy>=1.26",
    "torch>=2.2",
    "wandb>=0.16",
    "pyzstd>=0.15",
    "lz4>=4.3",
    "toml>=0.10",
    "tqdm>=4.66",
    # Linux-only: used by util/loaders.py for shared memory prefetch.
    "fallocate>=1.6 ; sys_platform == 'linux'",
]

[tool.uv]
# darwin: install torch from PyPI (Apple Silicon wheels include MPS support).
# linux: also defaults to PyPI; if you want CUDA wheels on a GPU box, install
# from https://download.pytorch.org/whl/cu121 (or current) outside of uv,
# or add a tool.uv.sources block here.

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["othello_ml"]
